@@ -34,6 +34,8 @@ frontmatter.DocTitle            standalone (r)                320
 
 frontmatter.DocInfo             standalone (r)                340
 
+frontmatter.SectSubTitle        standalone (r)                350
+
 peps.Headers                    pep (r)                       360
 
 peps.Contents                   pep (r)                       380
